"feat: add slider to portfolio"

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,20 +99,19 @@
 							<span class="title__text">Portfolio</span>
 						</h2>
 					</div>
-					<div class="button__items">
-						<div class="buton">  </div>
-						<button type="submit" class="bt__border">Winter</button>
-						<button type="submit" class="bt__border">Sping</button>
-						<button type="submit" class="bt__border">Summer</button>
-						<button type="submit" class="bt__border">Autumn</button>
+					<div class="button__items">				
+						<button type="submit" class="bt__border" data-season="winter">Winter</button>
+						<button type="submit" class="bt__border" data-season="spring">Sping</button>
+						<button type="submit" class="bt__border" data-season="summer">Summer</button>
+						<button type="submit" class="bt__border" data-season="autumn">Autumn</button>
 					</div>
 					<div class="portfolio__items">
-						<img src="assets/img/jpg/portfolio-img.jpg" class="portfolio__image" alt="Photo">
-						<img src="assets/img/jpg/portfolio-img-1.jpg" class="portfolio__image" alt="Photo">
-						<img src="assets/img/jpg/portfolio-img-2.jpg" class="portfolio__image" alt="Photo">
-						<img src="assets/img/jpg/portfolio-img-3.jpg" class="portfolio__image" alt="Photo">
-						<img src="assets/img/jpg/portfolio-img-4.jpg" class="portfolio__image" alt="Photo">
-						<img src="assets/img/jpg/portfolio-img-5.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/1.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/2.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/3.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/4.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/5.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/6.jpg" class="portfolio__image" alt="Photo">
 					</div>
 				</section>
 		
