feat: add button active

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,7 +109,7 @@
 						<img src="assets/img/jpg/autumn/1.jpg" class="portfolio__image" alt="Photo">
 						<img src="assets/img/jpg/autumn/2.jpg" class="portfolio__image" alt="Photo">
 						<img src="assets/img/jpg/autumn/3.jpg" class="portfolio__image" alt="Photo">
-						<img src="assets/img/jpg/autumn/4.jpg" class="portfolio__image" alt="Photo">
+						<img src="assets/img/jpg/autumn/4.jpg" class="portfDolio__image" alt="Photo">
 						<img src="assets/img/jpg/autumn/5.jpg" class="portfolio__image" alt="Photo">
 						<img src="assets/img/jpg/autumn/6.jpg" class="portfolio__image" alt="Photo">
 					</div>
