--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,18 +20,18 @@
 
 					<nav class="header__nav">
 						<ul class="header__list">
-							<li class="header__item"><a href="#skills" class="header__link">Skills</a></li>
-							<li class="header__item"><a href="#portfolio" class="header__link">Portfolio</a></li>
-							<li class="header__item"><a href="#video" class="header__link">Video</a></li>
-							<li class="header__item"><a href="#price" class="header__link">Price</a></li>
-							<li class="header__item"><a href="#contacts" class="header__link">Contacts</a></li>
+							<li class="header__item" data-i18="skills"><a href="#skills" class="header__link">Skills</a></li>
+							<li class="header__item" data-i18="portfolio" ><a href="#portfolio" class="header__link">Portfolio</a></li>
+							<li class="header__item" data-i18="video"><a href="#video" class="header__link">Video</a></li>
+							<li class="header__item" data-i18="price"><a href="#price" class="header__link">Price</a></li>
+							<li class="header__item" data-i18="contacts"><a href="#contacts" class="header__link">Contacts</a></li>
 						</ul>
 					</nav>
 
 					<div class="header__lang"> 
-						<a href="#english" class="header__link__lang">en</a>
+						<a href="#english" class="header__link__lang-en">en</a>
 						<p> / </p>
-						<a href="#russian" class="header__link__lang">ru</a>
+						<a href="#russian" class="header__link__lang-ru">ru</a>
 					</div>
 
 					<button class="hamburger">
@@ -56,9 +56,9 @@
 				<div class="hero__container"> 
 					<section class="hero">
 						<div class="hero__info">
-							<h1 class="hero__title">Alexa Rise</h1>
-							<p class="hero__subtitle">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
-							<button type="submit" class="bt__solid">Here me</button>
+							<h1 class="hero__title" data-i18="hero-title">Alexa Rise</h1>
+							<p class="hero__subtitle" data-i18="hero-text">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+							<button type="submit" class="bt__solid" data-i18="hire">Here me</button>
 						</div>
 					</section>
 				</div>
@@ -66,29 +66,29 @@
 				<section class="skills" id="skills">
 					<div class="section__title">
 						<h2 class="title">
-							<span class="title__text">Skills</span>
+							<span class="title__text" data-i18="skills">Skills</span>
 						</h2>
 					</div>
 					<div class="skills__items"> 
 						<div class="skill__item">
 							<img src="assets/img/svg/camera 1.svg"  class="items__icon" alt="camera">
-							<p class="item__title">Digital photography</p>
-							<p class="item__subtitle">High-quality photos in the studio and on the nature</p>	
+							<p class="item__title" data-i18="skill-title-1">Digital photography</p>
+							<p class="item__subtitle" data-i18="skill-text-1">High-quality photos in the studio and on the nature</p>	
 						</div>
 						<div class="skill__item">
 							<img src="assets/img/svg/video 1.svg" class="items__icon" alt="camera">
-							<p class="item__title">Video shooting</p>
-							<p class="item__subtitle">Capture your moments so that they always stay with you</p>
+							<p class="item__title" data-i18="skill-title-2">Video shooting</p>
+							<p class="item__subtitle" data-i18="skill-text-2">Capture your moments so that they always stay with you</p>
 						</div>
 						<div class="skill__item">
 							<img src="assets/img/svg/image 1.svg" class="items__icon" alt="camera">
-							<p class="item__title">Retouch</p>
-							<p class="item__subtitle">I strive to make photography surpass reality</p>
+							<p class="item__title" data-i18="skill-title-3">Retouch</p>
+							<p class="item__subtitle" data-i18="skill-text-3">I strive to make photography surpass reality</p>
 						</div>
 						<div class="skill__item">
 							<img src="assets/img/svg/mic 1.svg" class="items__icon" alt="camera">
-							<p class="item__title">Audio</p>
-							<p class="item__subtitle">Professional sounds recording for video, advertising, portfolio</p>
+							<p class="item__title" data-i18="skill-title-4">Audio</p>
+							<p class="item__subtitle" data-i18="skill-text-4">Professional sounds recording for video, advertising, portfolio</p>
 						</div>
 					</div>
 				</section>
@@ -96,14 +96,14 @@
 				<section class="portfolio" id="portfolio">
 					<div class="section__title">
 						<h2 class="title">
-							<span class="title__text">Portfolio</span>
+							<span class="title__text" data-i18="portfolio">Portfolio</span>
 						</h2>
 					</div>
 					<div class="button__items">				
-						<button type="submit" class="bt__border" data-season="winter">Winter</button>
-						<button type="submit" class="bt__border" data-season="spring">Sping</button>
-						<button type="submit" class="bt__border" data-season="summer">Summer</button>
-						<button type="submit" class="bt__border" data-season="autumn">Autumn</button>
+						<button type="submit" class="bt__border" data-i18="winter" data-season="winter">Winter</button>
+						<button type="submit" class="bt__border" data-i18="spring" data-season="spring">Sping</button>
+						<button type="submit" class="bt__border" data-i18="summer" data-season="summer">Summer</button>
+						<button type="submit" class="bt__border" data-i18="autumn" data-season="autumn">Autumn</button>
 					</div>
 					<div class="portfolio__items">
 						<img src="assets/img/jpg/autumn/1.jpg" class="portfolio__image" alt="Photo">
@@ -118,7 +118,7 @@
 				<section class="video" id="video">
 					<div class="section__title">
 						<h2 class="title">
-							<span class="title__text">Video</span>
+							<span class="title__text" data-i18="video">Video</span>
 						</h2>
 					</div>
 					<div class="video__player">
@@ -130,56 +130,56 @@
 				<section class="price" id="price">
 					<div class="section__title">
 						<h2 class="title">
-							<span class="title__text">Price</span>
+							<span class="title__text" data-i18="price">Price</span>
 						</h2>
 					</div>
 					<div class="price__items">
 						<div class="price__item">
-							<p class="price__title">Standard</p>
+							<p class="price__title" >Standard</p>
 							<p class="price__value"> 500 $</p>				
 							<div class="price__info">
-								<span>One location</span>
-								<span>120 photos in color</span>
-								<span>12 photos in retouch</span>
-								<span>Readiness 2-3 weeks</span>
-								<span>Make up, visage</span>
+								<span data-i18="price-description-1-span-1">One location</span>
+								<span data-i18="price-description-1-span-2">120 photos in color</span>
+								<span data-i18="price-description-1-span-3">12 photos in retouch</span>
+								<span data-i18="price-description-1-span-4">Readiness 2-3 weeks</span>
+								<span data-i18="price-description-1-span-5">Make up, visage</span>
 							</div>
-							<button type="submit" class="bt__price">Order shooting</button>
+							<button type="submit" class="bt__price" data-i18="order">Order shooting</button>
 						</div>
 						<div class="price__item">
 							<p class="price__title">Premium</p>
 							<p class="price__value"> 700 $</p>				
 							<div class="price__info">
-								<span>One or two locations</span>
-								<span>200 photos in color</span>
-								<span>20 photos in retouch</span>
-								<span>Readiness 1-2 weeks</span>
-								<span>Make up, visage</span>
+								<span data-i18="price-description-2-span-1">One or two locations</span>
+								<span data-i18="price-description-2-span-2">200 photos in color</span>
+								<span data-i18="price-description-2-span-3">20 photos in retouch</span>
+								<span data-i18="price-description-2-span-4">Readiness 1-2 weeks</span>
+								<span data-i18="price-description-2-span-5">Make up, visage</span>
 							</div>
-							<button type="submit" class="bt__price">Order shooting</button>
+							<button type="submit" class="bt__price" data-i18="order">Order shooting</button>
 						</div>
 						<div class="price__item">
 							<p class="price__title">Gold</p>
 							<p class="price__value"> 1000 $</p>				
 							<div class="price__info">
-								<span>Three locations or more</span>
-								<span>300 photos in color</span>
-								<span>50 photos in retouch</span>
-								<span>Readiness 1 week</span>
-								<span>Make up, visage, hairstyle</span>
+								<span data-i18="price-description-3-span-1">Three locations or more</span>
+								<span data-i18="price-description-3-span-2">300 photos in color</span>
+								<span data-i18="price-description-3-span-3">50 photos in retouch</span>
+								<span data-i18="price-description-3-span-4">Readiness 1 week</span>
+								<span data-i18="price-description-3-span-5">Make up, visage, hairstyle</span>
 							</div>
-							<button type="submit" class="bt__price">Order shooting</button>
+							<button type="submit" class="bt__price" data-i18="order">Order shooting</button>
 						</div>
 					</div>
 				</section>
 		
 				<section class="contacts" id="contacts">
-					<h2 class="title__contact">Contact me</h2>
+					<h2 class="title__contact" data-i18="contact-me">Contact me</h2>
 					<div class="contact__container">
 						<input type="email" class="input__text" placeholder="E-mail">
 						<input type="tel" class="input__text" placeholder="Phone">
 						<textarea name="text" class="message"  placeholder="Message"></textarea>
-						<button type="submit" class="bt__contact">Send message</button>
+						<button type="submit" class="bt__contact" data-i18="send-message">Send message</button>
 					</div>
 				</section>
 			</div>
@@ -202,5 +202,6 @@
 		</div>
 	</footer>
 	<script src="index.js"></script>
+	
 </body>
 </html>
