--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,11 +20,11 @@
 
 					<nav class="header__nav">
 						<ul class="header__list">
-							<li class="header__item" data-i18="skills"><a href="#skills" class="header__link">Skills</a></li>
-							<li class="header__item" data-i18="portfolio" ><a href="#portfolio" class="header__link">Portfolio</a></li>
-							<li class="header__item" data-i18="video"><a href="#video" class="header__link">Video</a></li>
-							<li class="header__item" data-i18="price"><a href="#price" class="header__link">Price</a></li>
-							<li class="header__item" data-i18="contacts"><a href="#contacts" class="header__link">Contacts</a></li>
+							<li class="header__item" ><a href="#skills" class="header__link" data-i18="skills">Skills</a></li>
+							<li class="header__item"  ><a href="#portfolio" class="header__link" data-i18="portfolio">Portfolio</a></li>
+							<li class="header__item" ><a href="#video" class="header__link" data-i18="video">Video</a></li>
+							<li class="header__item" ><a href="#price" class="header__link" data-i18="price">Price</a></li>
+							<li class="header__item" ><a href="#contacts" class="header__link" data-i18="contacts">Contacts</a></li>
 						</ul>
 					</nav>
 
