feat: add light theme

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,12 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000000">
-	<meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF">
 
 	
 	<link rel="stylesheet" href="style.css"> 
-	<link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)"> 
+	<link rel="stylesheet" href="dark.css" id="theme"> 
 	<link rel="stylesheet" href="light.css" media="(prefers-color-scheme: light)"> 
 	
 	<link rel="icon" href="assets/img/ico/icon.ico">
@@ -21,9 +19,7 @@
 
 			<div class="header__container"> 
 
-				<div class="header__logo">
-					<img src="assets/img/svg/logo.svg" alt="logo">
-				</div>
+				<div class="header__logo"></div>
 
 					<nav class="header__nav">
 						<ul class="header__list">
@@ -41,9 +37,7 @@
 						<a href="#russian" class="header__link__lang-ru">ru</a>
 					</div>
 
-					<div class="header__theme-logo">
-						<img src="assets/img/svg/sun.svg" alt="theme icon">
-					</div>
+					<div class="header__theme-logo"></div>
 
 					<button class="hamburger">
 					  <div class="line line1"></div>
@@ -77,7 +71,7 @@
 					</div>
 					<div class="skills__items"> 
 						<div class="skill__item">
-							<img src="assets/img/svg/camera 1.svg"  class="items__icon" alt="camera">
+							<img src="assets/img/svg/camera1.svg"  class="items__icon" alt="camera">
 							<p class="item__title" data-i18="skill-title-1">Digital photography</p>
 							<p class="item__subtitle" data-i18="skill-text-1">High-quality photos in the studio and on the nature</p>	
 						</div>
