feat: add progress bar

--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,10 @@
 	<title>Audio-player</title>
 </head>
 <body>
-	<img src="/assets/img/jpg/demons.jpg" alt="background" id="background">
+	<img id="background" src="/assets/img/jpg/demons.jpg" alt="background" >
 	<main class="page">
 		<div class="container">
-			<img src="/assets/img/jpg/demons.jpg" alt="poster" id="poster">
+			<img id="poster" src="/assets/img/jpg/demons.jpg" alt="poster" >
 
 			<div class="container__info">
 
@@ -29,7 +29,12 @@
 					<button class ="next-btn"><img src="/assets/img/svg/skip_next.svg" alt=""></button>					
 				</div>
 
-				<div class="player"> <audio src="/assets/song/Imagine_Dragons_Demons.mp3"></audio></div>
+	
+					<audio src="/assets/song/demons.mp3"></audio>
+				<div class="progress__container">
+					<div class="progress"></div>
+				</div>
+			
 
 			</div>
 		</div>
