feat: add transformation for poster

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 	<img id="background" src="/assets/img/jpg/demons.jpg" alt="background" >
 	<main class="page">
 		<div class="container">
-			<img id="poster" src="/assets/img/jpg/demons.jpg" alt="poster" >
+			<img id="poster" src="/assets/img/jpg/demons.jpg" style="transform: scale(1);" alt="poster" >
 
 			<div class="container__info">
 
@@ -34,19 +34,22 @@
 				<div class="progress__container">
 					<div class="progress"></div>
 				</div>
+				<div class="time">
+					<div class="current-time">0:00</div>
+					<div class="duration-time">3:52</div>
+				</div>
 			
 
 			</div>
 		</div>
 	</main>
 
-	<footer class="footer">
+	<footer class = "footer">
 		<div class="footer__container">
-			<div class="footer__data">© 2022 <a href="https://github.com/Lizaveta01" class="git">github</a>
-			</div>
-			<p class="footer__link"><a href="https://rs.school/js/" class="footer__link">Rolling Scopes School</a></p>
+			<div>© 2022 <a href="https://github.com/Lizaveta01" class="nav-link">Lizaveta01</a></div>
+			<a href="https://rs.school/js/" class="rss"></a>
 		</div>
-		</footer>
+	</footer>
 	<script src="/js/index.js"></script>
 </body>
 </html>
