--- a/audio-player/html/index.html
+++ b/audio-player/html/index.html
@@ -5,15 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/css/style.css">
-	<link rel="icon" href="/assets/img/ico/favicon.ico">
+	<link rel="icon" href="audio-player/assets/img/ico/favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Lexend+Deca&family=Merriweather:wght@700&display=swap" rel="stylesheet">
 	<title>Audio-player</title>
 </head>
 <body>
-	<img id="background" src="/assets/img/jpg/demons.jpg" alt="background" >
+	<img id="background" src="audio-player/assets/img/jpg/demons.jpg" alt="background" >
 	<main class="page">
 		<div class="container">
-			<img id="poster" src="/assets/img/jpg/demons.jpg" style="transform: scale(1);" alt="poster" >
+			<img id="poster" src="audio-player/assets/img/jpg/demons.jpg" style="transform: scale(1);" alt="poster" >
 
 			<div class="container__info">
 
@@ -23,14 +23,14 @@
 				</div>
 
 				<div class="buttons">
-					<button class ="last-btn"><img src="/assets/img/svg/skip_previous.svg" alt=""></button>
+					<button class ="last-btn"><img src="audio-player/assets/img/svg/skip_previous.svg" alt=""></button>
 					<button class ="play-btn"></button>
 
-					<button class ="next-btn"><img src="/assets/img/svg/skip_next.svg" alt=""></button>					
+					<button class ="next-btn"><img src="audio-player/assets/img/svg/skip_next.svg" alt=""></button>					
 				</div>
 
 	
-					<audio src="/assets/song/demons.mp3"></audio>
+					<audio src="audio-player/assets/song/demons.mp3"></audio>
 				<div class="progress__container">
 					<div class="progress"></div>
 				</div>
@@ -50,6 +50,6 @@
 			<a href="https://rs.school/js/" class="rss"></a>
 		</div>
 	</footer>
-	<script src="/js/index.js"></script>
+	<script src="audio-player/js/index.js"></script>
 </body>
 </html>
