--- a/audio/index.html
+++ b/audio/index.html
@@ -50,6 +50,6 @@
 			<a href="https://rs.school/js/" class="rss"></a>
 		</div>
 	</footer>
-	<script src="/js/index.js"></script>
+	<script src="/audio/js/index.js"></script>
 </body>
 </html>
