--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -6,11 +6,96 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/assets/img/ico/favicon.ico">
+	<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@500;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./assets/img/ico/favicon.ico">
+	<link rel="stylesheet" href="/style.css">
 	<title>Memory game</title>
 </head>
 <body>
+	<div class="wrapper">
+		<main class="main">
+			
+			<div class="card-list">
+					<div class="memory-card" data-framework="react">
+						<img class ="front-face" src="./assets/img/svg/react.svg" alt="React">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+					<div class="memory-card" data-framework="react">
+						<img class ="front-face" src="./assets/img/svg/react.svg" alt="React">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+
+					<div class="memory-card" data-framework="angular">
+						<img class ="front-face" src="./assets/img/svg/angular.svg" alt="Angular">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+					<div class="memory-card" data-framework="angular">
+						<img class ="front-face" src="./assets/img/svg/angular.svg" alt="Angular">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+
+					<div class="memory-card" data-framework="aurelia">
+						<img class ="front-face" src="./assets/img/svg/aurelia.svg" alt="Aurelia">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+					<div class="memory-card" data-framework="aurelia">
+						<img class ="front-face" src="./assets/img/svg/aurelia.svg" alt="Aurelia">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+
+					<div class="memory-card" data-framework="backbone">
+						<img class ="front-face" src="./assets/img/svg/backbone.svg" alt="Backbone">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+					<div class="memory-card" data-framework="backbone">
+						<img class ="front-face" src="./assets/img/svg/backbone.svg" alt="Backbone">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+
+					<div class="memory-card" data-framework="ember">
+						<img class ="front-face" src="./assets/img/svg/ember.svg" alt="Ember">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+					<div class="memory-card" data-framework="ember">
+						<img class ="front-face" src="./assets/img/svg/ember.svg" alt="Ember">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+
+					<div class="memory-card" data-framework="vue">
+						<img class ="front-face" src="./assets/img/svg/vue.svg" alt="Vue">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+					<div class="memory-card" data-framework="vue">
+						<img class ="front-face" src="./assets/img/svg/vue.svg" alt="Vue">
+						<img class ="back-face" src="./assets/img/svg/js-badge.svg" alt="Memory-card">
+					</div>
+			</div>
+
+			<div id="state">
+				<span id="time">0</span>
+				<span id="score">0</span>
+			</div>
+
+			<div class="result hidden">
+				<p class="win">You win!</p>
+				<p class="final"></p>
+				<br>
+				<button class="again">Play again?</button>
+			</div>
+			
+		</main>
+
+			<footer class="footer__container container">
+				<a href="https://github.com/Lizaveta01" class="nav-link" target="_blank"></a>
+				<div class="footer-year">© 2022 </div>
+				<a href="https://rs.school/js/" class="rss" target="_blank"></a>
+			</footer>
+
+	</div>
+
 	
+
+
+	<script src="index.js"></script>
 </body>
 </html>
