feat: add timer

--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -72,14 +72,17 @@
 			</div>
 
 			<div id="state">
-				<span id="time">0</span>
+				<span id="time">00:00:00</span>
 				<span id="score">0</span>
 			</div>
+			<button class="start-game__button">START</button>
 
 			<div class="result hidden">
 				<p class="win">You win!</p>
-				<p class="final"></p>
-				<br>
+				<div class="final">
+					<p class="final-time">0</p>
+					<p class="final-step">0</p>
+				</div>
 				<button class="again">Play again?</button>
 			</div>
 			
