--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -90,6 +90,19 @@
 				<button class="again">Play again?</button>
 			</div>
 			
+			<!-- <div class="result-legend">
+				<p class="win">Score</p>
+				<div class="final">
+					<div class="result-legent__time">
+						<p>0</p>
+					</div>
+					<div class="result-legent__step">
+						<p>0</p>
+					</div>
+				</div>
+				<button class="again">Play again?</button>
+			</div> -->
+			
 		</main>
 
 			<footer class="footer__container container">
