--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -102,7 +102,7 @@
 				</div>
 				<button class="again">Play again?</button>
 			</div> -->
-			
+			<!--для проверки сабмита-->
 		</main>
 
 			<footer class="footer__container container">
